wisecow_eks.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wisecow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wisecow
  name: deployment-wisecow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-wisecow
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-wisecow
    spec:
      containers:
      - image: yashgangwar123/wisecow:latest
        imagePullPolicy: Always
        name: wisecow
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: wisecow
  name: service-wisecow
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-wisecow
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wisecow
  name: ingress-wisecow
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-wisecow
              port:
                number: 80
